# DepQBFNaivePreprocessor

./: CMakeLists.txt  FNFException.cpp  FNFException.h  ParseException.cpp  ParseException.h  README.md  executetests.py  main.cpp  parser.cpp  parser.h  preprocessing.cpp  preprocessing.h
Formula/: clause.cpp  clause.h  formula.cpp  formula.h  quantgroup.cpp  quantgroup.h
benchmarks/: TOILET10.1.iv.20.qdimacs  TOILET16.1.iv.32.qdimacs  TOILET2.1.iv.3.qdimacs  TOILET2.1.iv.4.qdimacs  TOILET6.1.iv.11.qdimacs  TOILET6.1.iv.12.qdimacs  TOILET7.1.iv.13.qdimacs  TOILET7.1.iv.14.qdimacs  aim-50-1_6-yes1-4-50  aim-50-1_6-yes1-4-90  biu.qdimacs  biu2.qdimacs  biu3.qdimacs  biu4.qdimacs  easy  ii32e1-50.qdimacs  ssa.qdimacs  toilet_c_08_01.16.qdimacs  toilet_c_08_01.2.qdimacs  toilet_c_08_01.4.qdimacs  toilet_c_08_01.8.qdimacs  toilet_c_08_05.10.qdimacs  toilet_c_08_05.2.qdimacs  toilet_c_08_05.4.qdimacs  toilet_c_08_05.8.qdimacs  toilet_c_08_10.2.qdimacs  toilet_c_10.qdimacs  toilet_c_10_01.16.qdimacs  toilet_c_10_01.2.qdimacs  toilet_c_10_01.20.qdimacs  toilet_c_10_01.4.qdimacs  toilet_c_10_01.8.qdimacs  toilet_c_10_05.12.qdimacs  toilet_c_10_05.2.qdimacs  toilet_c_10_05.4.qdimacs  toilet_c_10_05.7.qdimacs  toilet_c_10_05.8.qdimacs
